tests/dataset/tpc-ds/compiler/py/q13.out
Traceback (most recent call last):
  File "/tmp/q13.py", line 394, in <module>
    result = _q0()
             ^^^^^
  File "/tmp/q13.py", line 383, in _q0
    return [
           ^
  File "/tmp/q13.py", line 385, in <listcomp>
    avg_ss_quantity=_avg([x["ss_quantity"] for x in g]),
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/tmp/q13.py", line 385, in <listcomp>
    avg_ss_quantity=_avg([x["ss_quantity"] for x in g]),
                          ~^^^^^^^^^^^^^^^
TypeError: 'StoreSale' object is not subscriptable
